[gd_scene load_steps=3 format=3 uid="uid://dkooc6f0myqnn"]

[ext_resource type="Script" uid="uid://daqogdamvwe83" path="res://classes/mob_base.gd" id="1_piull"]

[sub_resource type="CircleShape2D" id="CircleShape2D_8gsgy"]
resource_local_to_scene = true
radius = 32.0

[node name="MobBase" type="Area2D"]
collision_layer = 2
script = ExtResource("1_piull")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_8gsgy")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="death" from="." to="." method="_on_death"]
[connection signal="hit" from="." to="." method="_on_hit"]
